crates/typf-render/src/snapshots/typf_render__svg__tests__svg_color_emoji.snap
---
source: crates/typf-render/src/svg.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0.00 -1.00 64.00 1.50">
  <g id="text">
    <g id="glyph-0" transform="matrix(0.07 0 0 -0.07 0.00 0.00)">
      <defs>
        <clipPath id="glyph-0-clip0">
          <path d="M 64 -192 L 1184 -192 L 1184 896 L 64 896 Z" />
        </clipPath>
        <clipPath id="glyph-0-clip1">
          <path d="M 630 -164 Q 738 -164 836 -128.5 Q 934 -93 1009 -28 Q 1090 44 1132 142.5 Q 1174 241 1174 360 Q 1174 479 1132 578.5 Q 1090 678 1009 749 Q 934 815 836.5 849.5 Q 739 884 630 884 Q 552 884 474 864 Q 396 844 326 803.5 Q 256 763 202 700.5 Q 148 638 117 553 Q 86 468 86 360 Q 86 252 117 167.5 Q 148 83 202 20.5 Q 256 -42 326 -83 Q 396 -124 474 -144 Q 552 -164 630 -164 Z" />
        </clipPath>
        <radialGradient id="glyph-0-rg0" gradientUnits="userSpaceOnUse" cx="630.00" cy="360.00" r="534.00" fx="630.00" fy="360.00" fr="0.00" spreadMethod="pad">
          <stop offset="0.50" stop-color="rgb(253,224,48)" stop-opacity="1.000" />
          <stop offset="0.92" stop-color="rgb(247,192,43)" stop-opacity="1.000" />
          <stop offset="1.00" stop-color="rgb(244,162,35)" stop-opacity="1.000" />
        </radialGradient>
        <clipPath id="glyph-0-clip2">
          <path d="M 450 566 Q 480 566 502.5 542.5 Q 525 519 525 478 Q 525 437 502.5 413.5 Q 480 390 450 390 L 450 390 Q 421 390 398 413.5 Q 375 437 375 478 Q 375 519 398 542.5 Q 421 566 450 566 L 450 566 Z" />
        </clipPath>
        <clipPath id="glyph-0-clip3">
          <path d="M 489 308 Q 503 295 494 277 Q 489 267 478.5 263.5 Q 468 260 458 265 L 458 265 Q 444 278 453 296 Q 458 306 468.5 309.5 Q 479 313 489 308 L 489 308 Z" transform="matrix(1.00 0.00 0.00 1.00 -41.91 221.06)" />
        </clipPath>
        <clipPath id="glyph-0-clip4">
          <path d="M 810 566 Q 839 566 862 542.5 Q 885 519 885 478 Q 885 437 862 413.5 Q 839 390 810 390 L 810 390 Q 781 390 758 413.5 Q 735 437 735 478 Q 735 519 758 542.5 Q 781 566 810 566 L 810 566 Z" />
        </clipPath>
        <clipPath id="glyph-0-clip5">
          <path d="M 489 308 Q 503 295 494 277 Q 489 267 478.5 263.5 Q 468 260 458 265 L 458 265 Q 444 278 453 296 Q 458 306 468.5 309.5 Q 479 313 489 308 L 489 308 Z" transform="matrix(1.00 0.00 0.00 1.00 317.62 221.06)" />
        </clipPath>
        <clipPath id="glyph-0-clip6">
          <path d="M 1083 672 Q 1178 541 1178 360 Q 1178 241 1135.5 142.5 Q 1093 44 1013 -28 Q 938 -93 840 -128.5 Q 742 -164 634 -164 Q 544 -164 455 -137.5 Q 366 -111 290 -57 Q 214 -3 163 79 Q 216 6 289 -41.5 Q 362 -89 446 -112.5 Q 530 -136 615 -136 Q 723 -136 821 -100.5 Q 919 -65 994 0 Q 1075 72 1117 171 Q 1159 270 1159 388 Q 1159 549 1083 672 Z" />
        </clipPath>
        <clipPath id="glyph-0-clip7">
          <path d="M 994 279 Q 1004 261 999.5 241.5 Q 995 222 987 204 Q 942 105 848 49 Q 754 -7 632 -7 L 631 -7 Q 509 -7 415 49 Q 321 105 276 204 Q 267 222 263 241.5 Q 259 261 268 279 Q 278 296 297 303 Q 316 310 335 303 Q 480 261 631 262 Q 783 261 927 303 Q 946 310 965.5 303 Q 985 296 994 279 Z" />
        </clipPath>
        <clipPath id="glyph-0-clip8">
          <path d="M 781 30 Q 785 25 788 20 Q 713 -8 633 -8 L 631 -8 Q 547 -9 469 22 Q 471 24 472.5 26.5 Q 474 29 477 31 Q 479 34 482 36 Q 485 38 488 41 Q 551 91 632 90 Q 711 92 771 39 Q 773 37 776 34.5 Q 779 32 781 30 Z" />
        </clipPath>
        <clipPath id="glyph-0-clip9">
          <path d="M 927 303 Q 946 310 965.5 303 Q 985 296 994 279 Q 999 270 1000 261 Q 994 258 989 256 Q 822 177 639 179 Q 447 177 275 263 Q 269 265 264 268 Q 265 273 268 279 Q 278 296 297 303 Q 316 310 335 303 Q 480 261 631 262 Q 783 261 927 303 Z" />
        </clipPath>
        <clipPath id="glyph-0-clip10">
          <path d="M 995 278 Q 1004 261 1000 241.5 Q 996 222 988 204 Q 984 196 979.5 188.5 Q 975 181 971 173 Q 971 173 973.5 184.5 Q 976 196 978.5 212.5 Q 981 229 980.5 244.5 Q 980 260 974 268 Q 964 282 947 283 Q 941 283 934 281 Q 787 237 633 238 L 630 238 Q 476 237 328 281 Q 321 283 315 283 Q 298 282 289 268 Q 283 260 282 244.5 Q 281 229 283.5 212.5 Q 286 196 289 184.5 Q 292 173 292 173 Q 283 188 276 204 Q 267 222 263 241.5 Q 259 261 268 279 Q 278 296 297 303 Q 316 310 335 303 Q 480 261 631 262 Q 782 261 927 303 Q 947 310 966 303 Q 985 296 995 278 Z" />
        </clipPath>
      </defs>
      <g clip-path="url(#glyph-0-clip0)">
      <g clip-path="url(#glyph-0-clip1)">
      <path fill="url(#glyph-0-rg0)" d="M 630 -164 Q 738 -164 836 -128.5 Q 934 -93 1009 -28 Q 1090 44 1132 142.5 Q 1174 241 1174 360 Q 1174 479 1132 578.5 Q 1090 678 1009 749 Q 934 815 836.5 849.5 Q 739 884 630 884 Q 552 884 474 864 Q 396 844 326 803.5 Q 256 763 202 700.5 Q 148 638 117 553 Q 86 468 86 360 Q 86 252 117 167.5 Q 148 83 202 20.5 Q 256 -42 326 -83 Q 396 -124 474 -144 Q 552 -164 630 -164 Z" />
      </g>
      <g clip-path="url(#glyph-0-clip2)">
      <path fill="rgb(66,43,13)" fill-opacity="1.000" d="M 450 566 Q 480 566 502.5 542.5 Q 525 519 525 478 Q 525 437 502.5 413.5 Q 480 390 450 390 L 450 390 Q 421 390 398 413.5 Q 375 437 375 478 Q 375 519 398 542.5 Q 421 566 450 566 L 450 566 Z" />
      </g>
      <g clip-path="url(#glyph-0-clip3)">
      <path fill="rgb(137,96,36)" fill-opacity="1.000" transform="matrix(1.00 0.00 0.00 1.00 -41.91 221.06)" d="M 489 308 Q 503 295 494 277 Q 489 267 478.5 263.5 Q 468 260 458 265 L 458 265 Q 444 278 453 296 Q 458 306 468.5 309.5 Q 479 313 489 308 L 489 308 Z" />
      </g>
      <g clip-path="url(#glyph-0-clip4)">
      <path fill="rgb(66,43,13)" fill-opacity="1.000" d="M 810 566 Q 839 566 862 542.5 Q 885 519 885 478 Q 885 437 862 413.5 Q 839 390 810 390 L 810 390 Q 781 390 758 413.5 Q 735 437 735 478 Q 735 519 758 542.5 Q 781 566 810 566 L 810 566 Z" />
      </g>
      <g clip-path="url(#glyph-0-clip5)">
      <path fill="rgb(137,96,36)" fill-opacity="1.000" transform="matrix(1.00 0.00 0.00 1.00 317.62 221.06)" d="M 489 308 Q 503 295 494 277 Q 489 267 478.5 263.5 Q 468 260 458 265 L 458 265 Q 444 278 453 296 Q 458 306 468.5 309.5 Q 479 313 489 308 L 489 308 Z" />
      </g>
      <g clip-path="url(#glyph-0-clip6)">
      <path fill="rgb(235,143,0)" fill-opacity="1.000" d="M 1083 672 Q 1178 541 1178 360 Q 1178 241 1135.5 142.5 Q 1093 44 1013 -28 Q 938 -93 840 -128.5 Q 742 -164 634 -164 Q 544 -164 455 -137.5 Q 366 -111 290 -57 Q 214 -3 163 79 Q 216 6 289 -41.5 Q 362 -89 446 -112.5 Q 530 -136 615 -136 Q 723 -136 821 -100.5 Q 919 -65 994 0 Q 1075 72 1117 171 Q 1159 270 1159 388 Q 1159 549 1083 672 Z" />
      </g>
      <g clip-path="url(#glyph-0-clip7)">
      <path fill="rgb(66,43,13)" fill-opacity="1.000" d="M 994 279 Q 1004 261 999.5 241.5 Q 995 222 987 204 Q 942 105 848 49 Q 754 -7 632 -7 L 631 -7 Q 509 -7 415 49 Q 321 105 276 204 Q 267 222 263 241.5 Q 259 261 268 279 Q 278 296 297 303 Q 316 310 335 303 Q 480 261 631 262 Q 783 261 927 303 Q 946 310 965.5 303 Q 985 296 994 279 Z" />
      </g>
      <g clip-path="url(#glyph-0-clip8)">
      <path fill="rgb(237,119,112)" fill-opacity="1.000" d="M 781 30 Q 785 25 788 20 Q 713 -8 633 -8 L 631 -8 Q 547 -9 469 22 Q 471 24 472.5 26.5 Q 474 29 477 31 Q 479 34 482 36 Q 485 38 488 41 Q 551 91 632 90 Q 711 92 771 39 Q 773 37 776 34.5 Q 779 32 781 30 Z" />
      </g>
      <g clip-path="url(#glyph-0-clip9)">
      <path fill="rgb(255,255,255)" fill-opacity="1.000" d="M 927 303 Q 946 310 965.5 303 Q 985 296 994 279 Q 999 270 1000 261 Q 994 258 989 256 Q 822 177 639 179 Q 447 177 275 263 Q 269 265 264 268 Q 265 273 268 279 Q 278 296 297 303 Q 316 310 335 303 Q 480 261 631 262 Q 783 261 927 303 Z" />
      </g>
      <g clip-path="url(#glyph-0-clip10)">
      <path fill="rgb(235,143,0)" fill-opacity="1.000" d="M 995 278 Q 1004 261 1000 241.5 Q 996 222 988 204 Q 984 196 979.5 188.5 Q 975 181 971 173 Q 971 173 973.5 184.5 Q 976 196 978.5 212.5 Q 981 229 980.5 244.5 Q 980 260 974 268 Q 964 282 947 283 Q 941 283 934 281 Q 787 237 633 238 L 630 238 Q 476 237 328 281 Q 321 283 315 283 Q 298 282 289 268 Q 283 260 282 244.5 Q 281 229 283.5 212.5 Q 286 196 289 184.5 Q 292 173 292 173 Q 283 188 276 204 Q 267 222 263 241.5 Q 259 261 268 279 Q 278 296 297 303 Q 316 310 335 303 Q 480 261 631 262 Q 782 261 927 303 Q 947 310 966 303 Q 985 296 995 278 Z" />
      </g>
      </g>
    </g>
  </g>
</svg>
